// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<div
  className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__submissions-table___1J9eA"
>
  <table>
    <thead>
      <tr>
        <th>
          Preview
        </th>
        <th>
          ID
        </th>
        <th>
          Type
        </th>
        <th>
          Submission Date
        </th>
        <th
          className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__status___1X1-o"
        >
          Screening Status
        </th>
        <th
          className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__actions___16pRz"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <Submission
        onDelete={[Function]}
        onDownload={[Function]}
        onShowDetails={[Function]}
        showScreeningDetails={true}
        submissionObject={
          Object {
            "submissionId": 12345,
          }
        }
        type="DESIGN"
      />
      <tr
        className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__submission-row___1uclT"
      >
        <td
          className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__dev-details___2GC2b"
          colSpan="6"
        >
          <ScreeningDetails
            helpPageUrl=""
            onlineReviewUrl=""
            screeningObject={Object {}}
            submissionId={12345}
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Matches shallow shapshot 2`] = `
<div
  className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__submissions-table___1J9eA"
>
  <table>
    <thead>
      <tr>
        <th>
          Preview
        </th>
        <th>
          ID
        </th>
        <th>
          Type
        </th>
        <th>
          Submission Date
        </th>
        <th
          className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__status___1X1-o"
        >
          Screening Status
        </th>
        <th
          className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__actions___16pRz"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__submission-row___1uclT"
      >
        <td
          className="src-shared-components-SubmissionManagement-SubmissionsTable-___styles__no-submission___1jFHS"
          colSpan="6"
        >
          You have no submission uploaded so far.
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
